# AlphaDiana

./: .gitignore  README.md  pyproject.toml
alphadiana/: __init__.py  cli.py
alphadiana/agent/: __init__.py  base.py  direct_llm.py  openclaw.py  openclaw_runtime.py  registry.py
alphadiana/benchmark/: __init__.py  aime.py  base.py  custom.py  registry.py
alphadiana/config/: __init__.py  experiment_config.py  validator.py
alphadiana/dashboard/: run.sh
alphadiana/dashboard/backend/: api.py  data_loader.py  job_manager.py  main.py  models.py  sandbox_manager.py
alphadiana/dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.ts
alphadiana/dashboard/frontend/src/: App.tsx  (+2 more)
alphadiana/results/: __init__.py  report.py  result_store.py
alphadiana/runner/: __init__.py  batch_runner.py  dashboard.py  runner.py  task_dispatcher.py
alphadiana/sandbox/: __init__.py  base.py  local.py  pool.py  registry.py  rock.py
alphadiana/scorer/: __init__.py  base.py  exact_match.py  llm_judge.py  math_verify_scorer.py  numeric.py  registry.py
alphadiana/utils/: logging.py  math_answer.py  retry.py  rock_ports.py  rock_runtime.py  versioning.py
configs/: schema.yaml
configs/examples/: direct_llm.yaml  openclaw_aime2024.yaml
docs/: dashboard.md  getting_started.md  push_docker_image.md  setup_detail.md
openclaw_deploy/: Dockerfile.patched  deploy.py  openclaw.json  rock_agent_config.prebuilt.yaml  rock_agent_config.yaml
scripts/: activate.sh  cleanup_rock_ports.sh  find_rock_ports.py  quickstart.sh  rock_env.sh  setup_alphadiana_rock.sh
(+10 files in other folders)
