[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphadiana"
version = "0.1.0"
description = "Evaluation system for foundation models on frontier reasoning benchmarks"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
benchmarks = ["datasets>=2.0"]
agents = ["openai>=1.0", "httpx>=0.24"]
sandbox = ["requests>=2.28"]
rock = [
    "rl-rock[admin,sandbox-actor]>=1.3.0,<2",
    "nacos-sdk-python==2.0.9",
]
all = [
    "datasets>=2.0",
    "openai>=1.0",
    "httpx>=0.24",
    "requests>=2.28",
    "rl-rock[admin,sandbox-actor]>=1.3.0,<2",
    "nacos-sdk-python==2.0.9",
]
dashboard = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "httpx>=0.24"]

[project.scripts]
alphadiana = "alphadiana.cli:main"

[tool.setuptools.packages.find]
where = ["."]
